<resources>
    <string name="app_name">桂电课程表</string>
    <string name="vpn_url">https://v.guet.edu.cn/login</string>
    <string name="vpn_refer">https://v.guet.edu.cn</string>
    <string name="vpn_get_cookie">https://v.guet.edu.cn/wengine-vpn/cookie?method=get&amp;host=cas.guet.edu.cn&amp;scheme=https&amp;path=/authserver/login</string>
    <string name="url_Authserver">https://cas.guet.edu.cn/authserver/login</string>
    <string name="url_Authserver_VPN">https://v.guet.edu.cn/https/77726476706e69737468656265737421f3f652d220256d44300d8db9d6562d/authserver/login</string>
    <string name="url_SendPhoneOTP">https://cas.guet.edu.cn/authserver/dynamicCode/getDynamicCodeByReauth.do</string>
    <string name="url_SendPhoneOTP_VPN">https://v.guet.edu.cn/https/77726476706e69737468656265737421f3f652d220256d44300d8db9d6562d/authserver/dynamicCode/getDynamicCodeByReauth.do</string>
    <string name="url_ReAuth">https://cas.guet.edu.cn/authserver/reAuthCheck/reAuthSubmit.do</string>
    <string name="url_ReAuth_VPN">https://v.guet.edu.cn/https/77726476706e69737468656265737421f3f652d220256d44300d8db9d6562d/authserver/reAuthCheck/reAuthSubmit.do</string>
    <string name="url_ReAuth_Param">https://cas.guet.edu.cn/authserver/reAuthCheck/reAuthLoginView.do?isMultifactor=true&amp;service=http%3A%2F%2Ficampus.guet.edu.cn%2FGuetAccount%2FCasLogin</string>
    <string name="url_ReAuth_Param_VPN">https://v.guet.edu.cn/https/77726476706e69737468656265737421f3f652d220256d44300d8db9d6562d/authserver/reAuthCheck/reAuthLoginView.do?isMultifactor=true&amp;service=http%3A%2F%2Ficampus.guet.edu.cn%2FGuetAccount%2FCasLogin</string>
    <string name="SSO_context_type">application/x-www-form-urlencoded;charset=UTF-8</string>
    <string name="SSO_referer">https://cas.guet.edu.cn/</string>
    <string name="service_bkjw">service=https%3A%2F%2Fbkjw.guet.edu.cn</string>
    <string name="service_vpn">service=https%3a%2f%2fv.guet.edu.cn%2flogin%3fcas_login%3dtrue</string>
    <string name="SSO_bkjw">https://bkjw.guet.edu.cn/login/login</string>
    <string name="lan_referer">/</string>
    <string name="lan_login_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_student_url">/student/StuInfo</string>
    <string name="lan_get_student_success_contain_response_text">\"name\"</string>
    <string name="lan_get_grades_url">/student/getbyxw</string>
    <string name="lan_get_grades_success_contain_response_text">\"xfj\":</string>
    <string name="lan_get_terms_url">/Comm/GetTerm</string>
    <string name="lan_get_table_url">/student/getstutable</string>
    <string name="lan_get_table_success_contain_response_text">\"success\":true</string>
    <string name="lan_get_lab_table_url">/student/getlabtable</string>
    <string name="lan_get_exam_url">/student/getexamap</string>
    <string name="lan_get_cet_url">/student/GetLvlScore</string>
    <string name="lan_get_examscore_url">/Student/GetStuScore</string>
    <string name="lan_get_experimentscore_url">/student/getstulab</string>
    <string name="lan_get_resit_url">/student/getbk</string>
    <string name="lan_update_effective_credits">/student/genyxxf</string>
    <string name="lan_get_effective_credits">/student/Getyxxf</string>
    <string name="lan_get_planned_credits">/student/getplancj</string>
    <string name="url_smart_campus">http://icampus.guet.edu.cn/</string>
    <string name="url_graduation_project">https://co2.cnki.net/Login.html?dp=gliet&amp;r=1640591310211</string>
    <string name="url_vpn">https://v.guet.edu.cn/</string>
    <string name="url_lijiang">http://www.gxljxt.cn/</string>
    <string name="url_lijiang_vpn">https://v.guet.edu.cn/http/77726476706e69737468656265737421e7e056d22028645a661cc7af96/</string>
    <string name="url_change_vpn_pwd">https://cas.guet.edu.cn/retrieve-password/retrievePassword/index.html#/</string>
    <string name="url_activate_account">https://cas.guet.edu.cn/retrieve-password/accountActivation/index.html#/</string>
    <string name="text_school_song">桂电校歌</string>
    <string name="url_school_song">https://music.163.com/#/song?id=469744200</string>
    <string name="text_net_login">上网登录页</string>
    <string name="url_net_login">http://10.0.1.5/</string>
    <string name="text_cet">四六级官网(报名、查成绩)</string>
    <string name="url_cet">https://cet-bm.neea.edu.cn/</string>
    <string name="text_mail">桂电学生邮箱</string>
    <string name="url_mail">http://mail.guet.edu.cn/</string>
    <string name="text_training">培养方案</string>
    <string name="url_training">http://utsc.guet.edu.cn/training.aspx?mCode=001101</string>
    <string name="url_training_vpn">https://v.guet.edu.cn/http/77726476706e69737468656265737421e5e3529f69377d556a468ca88d1b203b/training.aspx?mCode=001101</string>
    <string name="text_calendar">教学日历</string>
    <string name="url_calendar">http://utsc.guet.edu.cn/calendar.aspx?mCode=0010</string>
    <string name="url_calendar_vpn">https://v.guet.edu.cn/http/77726476706e69737468656265737421e5e3529f69377d556a468ca88d1b203b/calendar.aspx?mCode=0010</string>
    <string name="text_lib_open">图书馆开放时间</string>
    <string name="url_lib_open">https://www.guet.edu.cn/lib/info/1064/2891.htm</string>
    <string name="text_map_hj">花江校区地图</string>
    <string name="url_map_hj">https://www.guet.edu.cn/xxjj/hjxqpmdt.htm</string>
    <string name="text_map_jjl">金鸡岭校区地图</string>
    <string name="url_map_jjl">https://www.guet.edu.cn/xxjj/jjlxqpmdt.htm</string>
    <string name="text_staff">智慧学工</string>
    <string name="url_staff">https://xsgl.guet.edu.cn/</string>
    <string name="url_staff_vpn">https://v.guet.edu.cn/https/77726476706e69737468656265737421e8e4469069377d556a468ca88d1b203b</string>
    <string name="url_course_arrange">http://utsc.guet.edu.cn/CourseArrange.aspx</string>
    <string name="url_course_arrange_vpn">https://v.guet.edu.cn/http/77726476706e69737468656265737421e5e3529f69377d556a468ca88d1b203b/CourseArrange.aspx?wrdrecordvisit=1640584485000</string>
    <string name="url_empty_room">http://utsc.guet.edu.cn/EmptyClassRoom.aspx</string>
    <string name="url_empty_room_vpn">https://v.guet.edu.cn/http/77726476706e69737468656265737421e5e3529f69377d556a468ca88d1b203b/EmptyClassRoom.aspx?mCode=001503</string>
    <string name="text_news_1">校内公告</string>
    <string name="url_news_1">http://weixin.guet.edu.cn/News?type=0</string>
    <string name="text_news_2">校内通知</string>
    <string name="url_new_2">http://weixin.guet.edu.cn/News?type=4</string>
    <string name="text_guet_class_table">桂电课程表交流群</string>
    <string name="key_guet_class_table">b6B5JNbpsHV0scWnS1amN7NH3Ry-LlrP</string>
    <string name="text_guet_class_table2">桂电课程表交流群②</string>
    <string name="key_guet_class_table2">l-RTk_x9Bu0TFmOIRDLnVMIOlYxVfajs</string>
    <string name="text_guet_find_3">桂电人失物招领3群(官方)</string>
    <string name="key_guet_find_3">MENv-n3_z8D6h4F9nyn-oiK-Z-FBM5Pr</string>
    <string name="text_stdio_music">校园广播电台点歌群(官方)</string>
    <string name="key_stdio_music">0uf7sem6bkCUjKTKR8CJp4rFRfO182tq</string>
    <string name="text_qqGroup_add">若您有面向同学免费开放的非盈利群聊，能够切实为同学提供帮助，我们将免费为您在这里展示和宣传，欢迎加群(桂电课程表交流群)合作！</string>
    <string name="first_about">该项目与学校官方无关。个人开发者作品，不含广告，永久免费。\n\n 该项目会一直开源，一直保证代码库最新，保证和小伙伴使用的APP源码一致。开源是为了接受大家的监督，也是保护小伙伴教务隐私的有效手段，感谢大家的支持！</string>
    <string name="about">仍然记得刚入学时看到同学发来的“桂电课程表”时的激动，一个简单的APP，却能够给桂电学子带来切实的便利，自己又何尝不想成为这样一个人… \n\n两年过去了，学长的那个课程表已经跟不上时代了，近期，学校关停了老版的教务系统，学长的课程表接入的正是这个系统，所以自然也无法使用；我也借Android课设的机会，完成自己的一个愿望，也是对学长的致敬。</string>
    <string name="gitee_url">https://gitee.com/fireworkwing/GuetClassTable</string>
    <string name="thanks_1">课程表控件: https://github.com/zfman/TimetableView</string>
    <string name="thanks_2">GUET课程表: https://github.com/Telephone2019/CourseTable</string>
    <string name="alipay_url">intent://platformapi/startapp?saId=10000007&amp;clientVersion=3.7.0.0718&amp;qrcode=https%3A%2F%2Fqr.alipay.com%2Ffkx10679zh5n4frnfxiye62%3F_s%3Dweb-other&amp;_t=1472443966571#Intent;scheme=alipayqr;package=com.eg.android.AlipayGphone;end</string>
    <string name="thanks_help">桂电课程表是学生小组开发软件，没有任何收入，只为给桂电学子提供一个简洁、安全和实用的平台。如果愿意，你可以捐赠支持我们。十分感谢！</string>
    <string name="join_us">我们开发者团队希望这个项目能够持久，我们也会一直开源，但是我们终究会离开校园，我们希望有能力喜欢奉献的你加入我们，让这个课程表可以长长久久！ \n\n看看我们自己，为了一个共同的小目标不顾一切，可能这就是青春吧！有想法？请立刻加入QQ群私聊我们！</string>
    <string name="privacy_text">\u0020\u0020在您使用过程中，桂电课程表可能会申请以下权限：\n
        1.读写手机存储权限\n
        \u0020\u0020当您成功登录后，用于存储课程表、考试安排等数据信息，便于下次离线查看。\n
        2.获取手机信息权限\n
        \u0020\u0020使用的第三方产品，会根据手机信息提供相关服务。\n
        3.网络权限\n
        \u0020\u0020当你登录教务账号后，用于获取教务数据，更新课表和考试安排等信息\n
        \u0020\u0020以上申请的权限，我们只用于必要的功能之中，不会收集您的隐私。若您选择拒绝授权，则只是相应功能无法使用或查看，不会影响应用整体使用。\n
        \u0020\u0020我们的产品或服务可能包括第三方的产品或服务，当您使用这些产品或服务时，也可能收集并使用您的信息以为您提供服务。\n
        \u0020\u0020收集这些信息仅用于定位软件问题与解决问题。我们会尽最大努力保证您的隐私与数据安全。
    </string>
    <string name="login_fail">登录失败, 请稍后重试，请点击右上角问号查看帮助</string>
    <string name="login_net_bkjw">请连接校园网后重试，请点击右上角问号查看帮助</string>
    <string name="login_fail_ck">验证码错误，登录失败，请点击右上角问号查看帮助</string>
    <string name="login_fail_pwd">密码错误，登录失败，请点击右上角问号查看帮助</string>
    <string name="login_fail_bkjw">教务密码错误，登录失败，请点击右上角问号查看帮助</string>
    <string name="login_fail_phoneOTPSend">验证码发送失败:</string>
    <string name="login_fail_getInfo">获取个人信息失败，请稍后重试，请点击右上角问号查看帮助</string>
    <string name="log_change_pwd">即将为您打开修改智慧校园密码的网页，请连接校园网。\n\n 登录成功后，输入原密码和新密码(需要同时包含大小写字母、数字和特殊字符)确认即可。\n\n Tip:本次只会修改智慧校园登录密码，不会修改教务系统的密码，密码修改后可能需要一段儿时间才会生效。</string>
    <string name="login_help">&#160;&#160;&#160;&#160;请输入智慧校园密码进行登录(建议使用校园网进行登录和数据同步！)。
        \n&#160;&#160;&#160;&#160;请确保使用网页可以正常进入教务系统，由于学校更换系统，所有账号均需要激活后才能使用，请点击“激活账户“按钮进行激活。
        \n&#160;&#160;&#160;&#160;偶尔学校网络会不稳定或者VPN被关闭，登录失败出现弹窗可以选择“仍然继续”，使用校园网进行数据同步。
        \n&#160;&#160;&#160;&#160;若您是新生或者尝试后仍然无法解决，请加入QQ群(在关于页面可以一键加群)，我们会帮您解决！</string>
    <string name="user_agent">Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/110.0.0.0 Safari/537.36 Edg/110.0.1587.41</string>
    <string name="cookie_delimiter">"; "</string>
    <string name="thanks_person">Casual | 就这 | ୧⍤⃝ⓍⓅ乏了 | 我终究不是个好人 | 🍓  |  sin²  |  沉山浮阳 | 迷 | 稚隳 </string>
    <string name="lan_get_selected_course"> https://bkjw.guet.edu.cn/student/GetSctCourse </string>
    <string name="titleBar_1">日课表</string>
    <string name="titleBar_3">更多功能</string>
    <string name="titleBar_4">个人信息</string>
    <string name="moreFun_jiaowu"> 教务查询 </string>
    <string name="moreFun_biye"> 毕业相关 </string>
    <string name="moreFun_guet"> 官方站点 </string>
    <string name="moreFun_test_schedule"> 考试安排 </string>
    <string name="moreFun_credits"> 学分绩 </string>
    <string name="moreFun_test_scores"> 考试成绩 </string>
    <string name="moreFun_lib_scores"> 实验成绩 </string>
    <string name="moreFun_resit_schedule"> 补考安排 </string>
    <string name="moreFun_lib_schedule"> 实验安排 </string>
    <string name="moreFun_selected_course"> 已选课程 </string>
    <string name="moreFun_plan_courses"> 计划课程 </string>
    <string name="moreFun_cet"> CET成绩 </string>
    <string name="moreFun_url_bkjw"> 教务系统 </string>
    <string name="moreFun_url_vpn"> 校内VPN </string>
    <string name="moreFun_url_campus"> 智慧校园 </string>
    <string name="moreFun_url_lijiang"> 漓江学堂 </string>
    <string name="moreFun_url_index">桂电导航</string>
    <string name="moreFun_url_graduation_project">毕设管理</string>
    <string name="moreFun_qqGroup">官方QQ群</string>
    <string name="person_version">版本:</string>
    <string name="hint_account">请输入学号</string>
    <string name="hint_vpn_password">请输入智慧校园密码</string>
    <string name="remember_password">记住密码</string>
    <string name="login">登录</string>
    <string name="login_2fa_phoneotp">登录二次验证-手机验证码</string>
    <string name="hint_2fa_phoneotp">请输入手机验证码</string>
    <string name="hint_2fa_phone">验证码已发送至:</string>
    <string name="find_password">&#160;&#160;找回密码&#160;&#160;</string>
    <string name="activate_account">&#160;&#160;激活账号&#160;&#160;</string>
</resources>