<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:orientation="vertical"
    tools:context=".activity.LoginActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">

        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/logo"
            android:onClick="openCampus"
            tools:ignore="ContentDescription,UsingOnClickInXml" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="40dp">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="39dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="10dp"
            android:src="@drawable/ic_user"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_gravity="center"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/hint_account"
            android:importantForAutofill="no"
            android:inputType="text"
            android:maxLines="1"
            android:textColorHint="@color/xui_config_color_50_pure_black"
            android:textSize="20sp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginTop="20dp">

        <ImageView
            android:layout_width="41dp"
            android:layout_height="41dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="9dp"
            android:layout_marginBottom="9dp"
            android:src="@drawable/ic_pwd"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="56dp"
            android:layout_marginEnd="28dp"
            android:layout_marginBottom="4dp"
            android:hint="@string/hint_vpn_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:maxLines="1"
            android:textColorHint="@color/xui_config_color_50_pure_black"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/iv_pwd_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="17dp"
            android:src="@drawable/ic_baseline_visibility_off_24"
            tools:ignore="ContentDescription" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="16dp">

        <CheckBox
            android:id="@+id/cb_remember_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="4dp"
            android:text="@string/remember_password"
            android:textColor="@color/theme_black" />

        <CheckBox
            android:id="@+id/cb_auto_term"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="4dp"
            android:text="@string/auto_term"
            android:textColor="@color/theme_black"
            tools:ignore="RelativeOverlap" />

    </RelativeLayout>

    <com.xuexiang.xui.widget.textview.supertextview.SuperButton
        android:id="@+id/login"
        style="@style/SuperButton.Primary.Login"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="6dp"
        android:text="@string/login"
        android:textSize="25sp" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_marginTop="10dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.xuexiang.xui.widget.button.ButtonView
                style="@style/ButtonView.Green"
                android:layout_width="wrap_content"
                android:layout_height="35dp"

                android:layout_gravity="center"
                android:onClick="activateAccount"
                android:text="@string/activate_account"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                tools:ignore="UsingOnClickInXml" />

            <com.xuexiang.xui.widget.button.ButtonView
                style="@style/ButtonView.Blue"
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:layout_gravity="center"

                android:layout_marginStart="30dp"
                android:onClick="changePwd"
                android:text="@string/find_password"
                android:textColor="#FFFFFF"
                android:textSize="15sp"
                tools:ignore="UsingOnClickInXml" />

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UselessParent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:text="@string/person_version"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_profile_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="15sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp">

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_centerHorizontal="true"
            android:onClick="showHelp"
            android:src="@drawable/p_need_help"
            tools:ignore="ContentDescription,UsingOnClickInXml" />

    </RelativeLayout>

</LinearLayout>