<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="10dp"
    app:cardCornerRadius="15dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="247dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/login_2fa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            android:text="@string/login_2fa_phoneotp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/phone_hit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="10dp"
            android:text="@string/hint_2fa_phone"
            android:textSize="16sp"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp">

            <ImageView
                android:layout_width="39dp"
                android:layout_height="27dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/tab_user"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_gravity="center"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                android:importantForAutofill="no"
                android:inputType="none"
                android:maxLines="1"
                android:textColorHint="@color/xui_config_color_50_pure_black"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginTop="16dp">

            <ImageView
                android:layout_width="39dp"
                android:layout_height="27dp"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="13dp"
                android:src="@drawable/password"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/et_phoneotp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginStart="56dp"
                android:layout_marginEnd="28dp"
                android:layout_marginBottom="4dp"
                android:hint="@string/hint_2fa_phoneotp"
                android:importantForAutofill="no"
                android:inputType="text"
                android:maxLines="1"
                android:textColorHint="@color/xui_config_color_50_pure_black"
                android:textSize="20sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_text_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_margin="5dp"
                android:padding="8dp"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"
                android:textSize="18sp" />

        </RelativeLayout>
    </LinearLayout>

</androidx.cardview.widget.CardView>